# CSE-PA-ASSIGNMENTS-PUB

./: .gitmodules
assignment02/: pyproject.toml
assignment02/assignment02/: lexer.py  main.py
assignment03/: pyproject.toml
assignment03/assignment03/: .gitignore  diagram.gv  main.py
assignment03/assignment03/folds/: class_fold.py
assignment03/assignment03/models/class_diagram/: access_modifiers.py  class_diagram.py  class_model.py  field_model.py  method_model.py
assignment03/assignment03/models/graph/: edge.py  graph.py  node.py
assignment04/: pyproject.toml
assignment04/assignment04/: main.py
assignment04/assignment04/folds/: method_fold.py  syntax_fold.py
assignment04/assignment04/interpreter/: bytecodeinterpreter.py  operandstack.py
assignment04/assignment04/models/class_diagram/: class_diagram.py  class_model.py  field_model.py  method_model.py  relationships.py
assignment04/assignment04/models/graph/: edge.py  graph.py
