[tool.poetry]
name = "assignment03"
version = "0.1.0"
description = ""
authors = ["Esben Damkjær Sørensen <esben@damkjaergaard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

